@@ -24,6 +24,7 @@ import de.adorsys.psd2.xs2a.spi.domain.SpiAspspConsentDataProvider;
 import de.adorsys.psd2.xs2a.spi.domain.account.SpiAccountReference;
 import de.adorsys.psd2.xs2a.spi.domain.authorisation.SpiAuthorisationStatus;
 import de.adorsys.psd2.xs2a.spi.domain.authorisation.SpiScaConfirmation;
+import de.adorsys.psd2.xs2a.spi.domain.payment.SpiBulkPayment;
 import de.adorsys.psd2.xs2a.spi.domain.payment.SpiSinglePayment;
 import de.adorsys.psd2.xs2a.spi.domain.payment.response.SpiGetPaymentStatusResponse;
 import de.adorsys.psd2.xs2a.spi.domain.payment.response.SpiPaymentExecutionResponse;
@@ -54,6 +55,7 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class GeneralPaymentServiceTest {
     private final static String PAYMENT_PRODUCT = "sepa-credit-transfers";
+    private final static String DEBTOR_NAME = "Mocked debtorName";
     private static final String ANY_MEDIA_TYPE = MediaType.ALL_VALUE;
     private static final String JSON_MEDIA_TYPE = MediaType.APPLICATION_JSON_VALUE;
     private static final String XML_MEDIA_TYPE = MediaType.APPLICATION_XML_VALUE;
@@ -183,6 +185,100 @@ class GeneralPaymentServiceTest {
         assertTrue(paymentById.isSuccessful());
         assertEquals(paymentAspsp, paymentById.getPayload());
     }
+
+    @Test
+    void getPaymentByIdTransactionStatusACSP_withDebtorName() {
+        //Given
+        SpiPayment input = getSpiSingleWithDebtorName(TransactionStatus.ACSP);
+        SpiPayment expected = getSpiSingleWithDebtorName(TransactionStatus.ACSP);
+
+        PaymentTO paymentTO = getPaymentToWithDebtorName();
+
+        GlobalScaResponseTO sca = getGlobalScaResponseTO();
+
+        doReturn(ResponseEntity.ok(paymentTO))
+                .when(paymentRestClient).getPaymentById(paymentTO.getPaymentId());
+        when(spiAspspConsentDataProvider.loadAspspConsentData())
+                .thenReturn(BYTES);
+        doNothing()
+                .when(authRequestInterceptor).setAccessToken(anyString());
+        when(consentDataService.response(BYTES))
+                .thenReturn(sca);
+        doReturn(expected)
+                .when(paymentMapper).toSpiSinglePayment(paymentTO);
+
+        //When
+        SpiResponse<SpiPayment> paymentById = generalPaymentService.getPaymentById(input, spiAspspConsentDataProvider, paymentMapper::toSpiSinglePayment);
+
+        //Then
+        assertTrue(paymentById.isSuccessful());
+        assertEquals(expected.getDebtorName(), paymentById.getPayload().getDebtorName());
+        assertEquals(expected, paymentById.getPayload());
+    }
+
+    @Test
+    void getPaymentByIdTransactionStatusACSP_BulkPaymentWithDebtorName() {
+        //Given
+        SpiBulkPayment input = getBulkPaymentWithDebtorName();
+        input.setPaymentStatus(TransactionStatus.ACSP);
+        SpiBulkPayment expected = getBulkPaymentWithDebtorName();
+        expected.setPaymentStatus(TransactionStatus.ACSP);
+
+        PaymentTO paymentTO = getPaymentToWithDebtorName();
+
+        GlobalScaResponseTO sca = getGlobalScaResponseTO();
+
+        doReturn(ResponseEntity.ok(paymentTO))
+                .when(paymentRestClient).getPaymentById(paymentTO.getPaymentId());
+        when(spiAspspConsentDataProvider.loadAspspConsentData())
+                .thenReturn(BYTES);
+        doNothing()
+                .when(authRequestInterceptor).setAccessToken(anyString());
+        when(consentDataService.response(BYTES))
+                .thenReturn(sca);
+        doReturn(expected)
+                .when(paymentMapper).mapToSpiBulkPayment(paymentTO);
+
+        //When
+        SpiResponse<SpiPayment> paymentById = generalPaymentService.getPaymentById(input, spiAspspConsentDataProvider, paymentMapper::mapToSpiBulkPayment);
+
+        //Then
+        assertTrue(paymentById.isSuccessful());
+        assertEquals(expected.getDebtorName(), paymentById.getPayload().getDebtorName());
+        assertEquals(expected, paymentById.getPayload());
+    }
+
+
+    @Test
+    void getPaymentByIdTransactionStatusRCVD_withDebtorName() {
+        //Given
+        SpiPayment input = getSpiSingleWithDebtorName(TransactionStatus.RCVD);
+        SpiPayment expected = getSpiSingleWithDebtorName(TransactionStatus.RCVD);
+
+        //When
+        SpiResponse<SpiPayment> paymentById = generalPaymentService.getPaymentById(input, spiAspspConsentDataProvider, paymentMapper::toSpiSinglePayment);
+
+        //Then
+        assertTrue(paymentById.isSuccessful());
+        assertEquals(expected.getDebtorName(), paymentById.getPayload().getDebtorName());
+        assertEquals(expected, paymentById.getPayload());
+    }
+
+    @Test
+    void getPaymentByIdTransactionStatusRCVD_BulkPaymentWithDebtorName() {
+        //Given
+        SpiBulkPayment input = getBulkPaymentWithDebtorName();
+        SpiBulkPayment expected = getBulkPaymentWithDebtorName();
+
+        //When
+        SpiResponse<SpiPayment> paymentById = generalPaymentService.getPaymentById(input, spiAspspConsentDataProvider, paymentMapper::mapToSpiBulkPayment);
+
+        //Then
+        assertTrue(paymentById.isSuccessful());
+        assertEquals(expected.getDebtorName(), paymentById.getPayload().getDebtorName());
+        assertEquals(expected, paymentById.getPayload());
+    }
+
 
     @Test
     void firstCallInstantiatingPayment_LedgersError() {
@@ -509,6 +605,38 @@ class GeneralPaymentServiceTest {
         spiPayment.setCreditorAgent(agent);
         spiPayment.setPaymentStatus(transactionStatus);
         return spiPayment;
+    }
+
+    private SpiSinglePayment getSpiSingleWithDebtorName(TransactionStatus transactionStatus) {
+        SpiSinglePayment spiPayment = new SpiSinglePayment(PAYMENT_PRODUCT);
+        spiPayment.setPaymentId("myPaymentId");
+        spiPayment.setDebtorName(DEBTOR_NAME);
+        spiPayment.setPaymentStatus(transactionStatus);
+        return spiPayment;
+    }
+
+    private PaymentTO getPaymentToWithDebtorName() {
+        PaymentTO paymentTO = new PaymentTO();
+        paymentTO.setPaymentId("myPaymentId");
+        paymentTO.setTransactionStatus(TransactionStatusTO.ACSP);
+        paymentTO.setDebtorName(DEBTOR_NAME);
+        return paymentTO;
+    }
+
+    private GlobalScaResponseTO getGlobalScaResponseTO() {
+        SpiPayment initialPayment = getSpiSingleWithDebtorName(TransactionStatus.ACSP);
+        GlobalScaResponseTO sca = new GlobalScaResponseTO();
+        sca.setOperationObjectId(initialPayment.getPaymentId());
+        BearerTokenTO bearerTokenTO = new BearerTokenTO();
+        bearerTokenTO.setAccess_token("accessToken");
+        sca.setBearerToken(bearerTokenTO);
+        return sca;
+    }
+
+    private SpiBulkPayment getBulkPaymentWithDebtorName() {
+        SpiBulkPayment initialPayment = new SpiBulkPayment();
+        initialPayment.setDebtorName(DEBTOR_NAME);
+        return initialPayment;
     }
 
     private FeignException buildFeignException() {
